# gitignore_parser

./: .gitignore  .pre-commit-config.yaml  README.md  azure-pipelines.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
src/vcs_ignore/: __init__.py
src/vcs_ignore/git/: __init__.py  _impl.py  gitignore.md
tests/: test_root.py
tests/git/: test_git.py
