[metadata]
name = vcs-ignore
description = A spec-compliant gitignore parser for Python 3.5+
long_description = file: README.md
long_description_content_type = text/markdown
keywords = git, ignore, gitignore
maintainer = Bernat Gabor
maintainer-email = gaborjbernat@gmail.com
author = Steve Cook, Michael Herrmann, Bernat Gabor
author_email = gaborjbernat@gmail.com
url = https://github.com/gaborbernat/vcs-ignore
project_urls =
    Source=https://github.com/gaborbernat/vcs-ignore
    Tracker=https://github.com/gaborbernat/vcs-ignore/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python'
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
platforms = any
license_file = LICENSE

[options]
zip_safe = True
packages = find:
python_requires = >=3.5
install_requires =

[options.extras_require]
test = pytest >= 4.0.0, < 5
       pytest-cov >= 2.6.0, < 3

[options.packages.find]
where = src

[bdist_wheel]
universal = true

[flake8]
max-line-length = 120
ignore = W503

[coverage:run]
branch = true
parallel = true

[coverage:report]
skip_covered = True
show_missing = True

[coverage:paths]
source = src/gitignore_parser
         .tox/*/lib/python*/site-packages/gitignore_parser
         .tox/pypy*/site-packages/gitignore_parser
         .tox\*\Lib\site-packages\gitignore_parser
         */src/gitignore_parser
         *\src\gitignore_parser
